--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,16 @@
-h1 {
-    color: red;
+form.login_form {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 600px;
+    /*height: 1000px;*/
+    background-color: hsl(32, 65%, 84%);
+    border: 1px solid gray;
+    border-radius: 5px;
+    padding: 10px;
+}
+div label {
+    font-size: 19px;
+}
+h1, h2 {
     text-align: center;
 }
