--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,3 +14,17 @@ div label {
 h1, h2 {
     text-align: center;
 }
+.color-block {
+        width: 100%;
+        height: 100%; }
+.table {
+        width: 100%;
+        table-layout: fixed;
+    }
+.table td {
+        height: 700px;
+    }
+td img{
+    width: 100%;
+    height: 100%;
+}
