--- a/templates/success.html
+++ b/templates/success.html
@@ -2,5 +2,5 @@
 
 {% block content %}
   <meta charset="utf-8">
-    <h1>Доступ разрешен, добро пожаловать на корабль</h1>
+    <h1 style="color:green">{{content}}</h1>
 {% endblock %}
