--- a/templates/base.html
+++ b/templates/base.html
@@ -2,17 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/static/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-                crossorigin="anonymous"></script>
     <title>{{ title }}</title>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
    <h1>Миссия Колонизация Марса</h1>
+      {% if current_user.is_authenticated %}
+      <a class="navbar-brand" href="/logout">{{ current_user.name }} {{current_user.surname}}</a>
+      <a class="btn btn-primary" href="/addjob">Add job</a>
+      <a class="btn btn-primary" href="/logout">Logout</a>
+      {% else %}
+      <p>
+          <a class="btn btn-primary" href="/register">Register</a>
+        <a class="btn btn-primary" href="/login">Login</a>
+      </p>
+      {% endif %}
       <a class="navbar-text" href="#">
         Mars one
       </a>
