--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
       {% else %}
       <p>
           <a class="btn btn-primary" href="/register">Register</a>
-        <a class="btn btn-primary" href="/login">Login</a>
+        <a class="btn btn-success" href="/login">Login</a>
       </p>
       {% endif %}
       <a class="navbar-text" href="#">
