--- a/templates/work.html
+++ b/templates/work.html
@@ -24,6 +24,16 @@
               <td class="table-danger">{{ is_finished }}</td>
           </tr>
           </table>
+        {% if current_user.is_authenticated and (current_user == job.user or current_user.id == 1)%}
+            <div>
+                <a href="/jobs/{{ job.id }}" class="btn btn-warning">
+                    Изменить
+                </a>
+                <a href="/job_delete/{{ job.id }}" class="btn btn-danger">
+                    Удалить
+                </a>
+            </div>
+        {% endif %}
     {% endfor%}
 
 
