--- a/templates/base.html
+++ b/templates/base.html
@@ -9,10 +9,11 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
    <h1>Миссия Колонизация Марса</h1>
+      <a class="btn btn-secondary" href="/departments">View departments</a>
       {% if current_user.is_authenticated %}
       <a class="navbar-brand" href="/logout">{{ current_user.name }} {{current_user.surname}}</a>
-      <a class="btn btn-primary" href="/addjob">Add job</a>
-      <a class="btn btn-primary" href="/logout">Logout</a>
+      <a class="btn btn-info" href="/addjob">Add job</a>
+      <a class="btn btn-danger" href="/logout">Logout</a>
       {% else %}
       <p>
           <a class="btn btn-primary" href="/register">Register</a>
