--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="/static/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>{{ title }}</title>
 </head>
@@ -26,6 +27,9 @@
     </div>
 </nav>
 <h4>И на Марсе будут яблони цвести!</h4>
+{% if current_user.is_authenticated %}
+    <a class="btn btn-success"  href="/users_show/{{current_user.id}}" style="margin-left:10px">Поностальгировать </a>
+{% endif %}
 <main role="main" class="container">
     {% block content %}
     {% endblock %}
